--- a/physical.html
+++ b/physical.html
@@ -34,10 +34,28 @@
           <article class="card">
             <div class="card-surface">
               <header class="card-header">
-                <span class="card-id">Inorganic Organic</span>
+                <span class="card-id">01</span>
               </header>
               <figure class="card-media">
-                <img src="
+                <img src="arm1.jpeg" alt="Closeup of Project Inorganic Organic robotic arm"/>
+              </figure>
+
+              <section class="card-content">
+                <h2 class="card-title">Inorganic Organic</h2>
+                <p class="card-description">
+                  Robotic Arm</p>
+              </section>
+            </div>
+
+            <div class="swiper-slide">
+              <article class="card">
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">02</span>
+                  </header>
+                  <figure class="card-media">
+                    <img src="
+                
 
   
   <div class="swiper">
