--- a/physical.html
+++ b/physical.html
@@ -29,8 +29,6 @@
       src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
       defer
     ></script>
-
-    <script src="decks.js" defer></script>
   </head>
 
   <body>
@@ -104,5 +102,6 @@
         <a href="https://www.linkedin.com/in/yifan-zhang-72b241290/" target="ext-links">LinkedIn</a>
       </address>
     </footer>
+    <script src="deck.js"></script>
   </body>
 </html>
