--- a/physical.html
+++ b/physical.html
@@ -49,7 +49,7 @@
 
                   <figure class="card-media">
                     <img
-                      src="arm1.jpeg"
+                      src="arm1.jpg"
                       alt="Closeup of Project Inorganic Organic robotic arm"
                     />
                   </figure>
@@ -72,7 +72,7 @@
 
                   <figure class="card-media">
                     <img
-                      src="voice1.jpeg"
+                      src="voice1.jpg"
                       alt="Voice Editor flat shot"
                     />
                   </figure>
