--- a/physical.html
+++ b/physical.html
@@ -32,6 +32,17 @@
   </head>
 
   <body>
+    <header id="top-header">
+      <div class="header-top">My Portfolio</div>
+
+      <nav id="main-nav">
+        <ul>
+          <li><a href="index.html" class="nav-btn">Home</a></li>
+          <li><a href="about.html" class="nav-btn">About</a></li>
+          <li><a href="extra.html" class="nav-btn active-link">Extra</a></li>
+        </ul>
+      </nav>
+    </header>
     <main class="container">
       <section class="deck">
         <h1 class="deck-title">Physical Computation Deck</h1>
@@ -102,6 +113,6 @@
         <a href="https://www.linkedin.com/in/yifan-zhang-72b241290/" target="ext-links">LinkedIn</a>
       </address>
     </footer>
-    <script src="deck.js"></script>
+    <script src="deck.js" defer></script>
   </body>
 </html>
