--- a/physical.html
+++ b/physical.html
@@ -32,17 +32,20 @@
   </head>
 
   <body>
-    <header id="top-header">
-      <div class="header-top">My Portfolio</div>
+   <header id="top-header">
+  <div class="header-top">
+    Eva Zhang
+  </div>
 
-      <nav id="main-nav">
-        <ul>
-          <li><a href="index.html" class="nav-btn">Home</a></li>
-          <li><a href="about.html" class="nav-btn">About</a></li>
-          <li><a href="extra.html" class="nav-btn active-link">Extra</a></li>
-        </ul>
-      </nav>
-    </header>
+  <nav id="main-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="extra.html" class="active-link">Extra</a></li>
+    </ul>
+  </nav>
+</header>
+
     <main class="container">
       <section class="deck">
         <h1 class="deck-title">Physical Computation Deck</h1>
