--- a/physical.html
+++ b/physical.html
@@ -23,7 +23,7 @@
 
    
     <link rel="stylesheet" href="physical.css" />
-
+   <link rel="stylesheet" href="style.css" />
     
     <script
       src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
