--- a/physical.html
+++ b/physical.html
@@ -31,7 +31,7 @@
     ></script>
   </head>
 
-  <body>
+  <body class="physical-page>
    <header id="top-header">
   <div class="header-top">
     Eva Zhang
