--- a/software.html
+++ b/software.html
@@ -1,1 +1,163 @@
+<!-- referenced from https://www.youtube.com/watch?v=w9OpXh3K6YI and modified -->
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Software / Coding Deck!</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="software.css" />
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
+      defer
+    ></script>
+  </head>
+
+  <body class="physical-page">
+    <header id="top-header">
+      <div class="header-top">Eva Zhang</div>
+
+      <nav id="main-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="extra.html" class="active-link">Extra</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="container">
+      <section class="deck">
+        <h1 class="deck-title">Software / Coding Deck</h1>
+
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <article class="card" data-link="project7.html">
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">01</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img
+                      src="cookie.png"
+                      alt="2000s computer graphics"
+                    />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Cookies</h2>
+                    <p class="card-description">2000s web game</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+
+            <div class="swiper-slide">
+              <article class="card" data-link="project5.html">
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">02</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img src="flower.png" alt="rainbow color triangles looping on black background" />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Hand Flowers</h2>
+                    <p class="card-description">Motion Sensor</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+
+   <div class="swiper-slide">
+              <article class="card" data-link="project4.html">
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">03</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img
+                      src="zombiant.png"
+                      alt="zombie with one leg and flower on head against blue plaid background"
+                    />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Zombiant</h2>
+                    <p class="card-description">Customizable Character</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+
+
+   <div class="swiper-slide">
+              <article class="card" data-link="project3.html">
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">04</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img
+                      src="spine.png"
+                      alt="skeleton on x-ray with raised hands against clouds"
+                    />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Spine Disk Clock</h2>
+                    <p class="card-description">Timer</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+
+
+            
+          </div>
+
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
+      <address>
+        <a href="mailto:yifanezhang@gmail.com">Contact Me</a><br />
+        Social Media:<br />
+        <a href="https://www.instagram.com/_ezzzart_" target="ext-links"
+          >Instagram</a
+        ><br />
+        <a
+          href="https://www.linkedin.com/in/yifan-zhang-72b241290/"
+          target="ext-links"
+          >LinkedIn</a
+        >
+      </address>
+    </footer>
+
+    <script src="deck.js"></script>
+  </body>
+</html>
