--- a/visual.html
+++ b/visual.html
@@ -1,1 +1,180 @@
+<!-- referenced from https://www.youtube.com/watch?v=w9OpXh3K6YI and modified -->
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cool Physical Computation Deck!</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="physical.css" />
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
+      defer
+    ></script>
+  </head>
+
+  <body class="physical-page">
+    <header id="top-header">
+      <div class="header-top">Eva Zhang</div>
+
+      <nav id="main-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="extra.html" class="active-link">Extra</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main class="container">
+      <section class="deck">
+        <h1 class="deck-title">Visual Art / Installations Deck</h1>
+
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <!-- <article class="card" data-link="inorganic-organic.html"> -->
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">01</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img
+                      src="skin.png"
+                      alt="human face and hands coming out of white surface"
+                    />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Alternate Skin</h2>
+                    <p class="card-description">Genetic Evolution</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+
+            <div class="swiper-slide">
+              <!-- <article class="card" data-link="voice-editor.html"> -->
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">02</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img src="frog.png" alt="Man looking down and offering a hand down the well" />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Frog in a Well</h2>
+                    <p class="card-description">Envy</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+
+<div class="swiper-slide">
+              <!-- <article class="card" data-link="inorganic-organic.html"> -->
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">03</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img
+                      src="lure.png"
+                      alt="Man resting his feet up a branch in the forest"
+                    />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Sleeping Lure</h2>
+                    <p class="card-description">Sloth</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+
+            <div class="swiper-slide">
+              <!-- <article class="card" data-link="inorganic-organic.html"> -->
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">04</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img
+                      src="madrigal.png"
+                      alt="woman shielding child from the sun rays in a forest"
+                    />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Madrigal</h2>
+                    <p class="card-description">Mom & Daughter Pt.1</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+            <div class="swiper-slide">
+              <!-- <article class="card" data-link="inorganic-organic.html"> -->
+                <div class="card-surface">
+                  <header class="card-header">
+                    <span class="card-id">05</span>
+                  </header>
+
+                  <figure class="card-media">
+                    <img
+                      src="disquietude.png"
+                      alt="woman following girl in corn maze"
+                    />
+                  </figure>
+
+                  <section class="card-content">
+                    <h2 class="card-title">Disquietude</h2>
+                    <p class="card-description">Mom & Daughter Pt.2</p>
+                  </section>
+                </div>
+              </article>
+            </div>
+          </div>
+
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
+      <address>
+        <a href="mailto:yifanezhang@gmail.com">Contact Me</a><br />
+        Social Media:<br />
+        <a href="https://www.instagram.com/_ezzzart_" target="ext-links"
+          >Instagram</a
+        ><br />
+        <a
+          href="https://www.linkedin.com/in/yifan-zhang-72b241290/"
+          target="ext-links"
+          >LinkedIn</a
+        >
+      </address>
+    </footer>
+
+    <script src="deck.js"></script>
+  </body>
+</html>
