--- a/physical.html
+++ b/physical.html
@@ -48,7 +48,7 @@
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <article class="card" data-link="inorganic-organic.html">
+              <!-- <article class="card" data-link="inorganic-organic.html"> -->
                 <div class="card-surface">
                   <header class="card-header">
                     <span class="card-id">01</span>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="swiper-slide">
-              <article class="card" data-link="voice-editor.html">
+              <!-- <article class="card" data-link="voice-editor.html"> -->
                 <div class="card-surface">
                   <header class="card-header">
                     <span class="card-id">02</span>
