--- a/visual.html
+++ b/visual.html
@@ -18,8 +18,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
- <link rel="stylesheet" href="physical.css" />
-    <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style.css" />
+ <link rel="stylesheet" href="visual.css" />
+
   
 
     <script
