--- a/product.html
+++ b/product.html
@@ -20,7 +20,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="physical.css" />
+    <link rel="stylesheet" href="product.css" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"
