--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
+  <div class="wrapper">
   <header id="top-header">
 
     <div class="header-top">
@@ -72,5 +73,6 @@ Social Media: <br>
   <small>3D model used under Fab Standard License, original creator of 3D model Multicore AI</small>
   </footer>
 <script type="module" src="main.js"></script>
+  </div>
 </body>
 </html>
